Feature: Schalstein-Kosten in Kalkulation integriert
- Neues Preisfeld fÃ¼r Schalsteine (Standard: 2,50 EUR netto)
- Automatische MwSt-Berechnung (19%) auf Schalsteine
- Kosten-Ãœbersicht erweitert: Schalsteine + Zement + Kies
- Anzeige Netto/MwSt/Brutto in allen Tabs
- Einkaufsliste mit detaillierter AufschlÃ¼sselung
- Export-Texte aktualisiert
- Neuer Unit-Test fÃ¼r Schalstein-Kosten (bestanden)
- Preis-Inputs jetzt Ã¼bersichtlich in 2 Spalten

Standard-Preis: 2,50 EUR/Stein ohne MwSt

--- a/config.yaml
+++ b/config.yaml
@@ -57,6 +57,7 @@ buffer:
 prices:
   cement_per_bag_eur: 5.0
   gravel_per_ton_eur: 34.0
+  stone_per_piece_eur: 2.50  # Schalstein-Preis ohne MwSt
 concrete_recommendation:
   quality: C25/30
   max_grain_size_mm: 16
